--- a/app.css
+++ b/app.css
@@ -18,7 +18,7 @@ h1 {
 #charactersList {
     padding-inline-start: 0;
     display: grid;
-    grid-template-columns: repeat(auto-fit, minmax(320px, 1fr));
+    grid-template-columns: repeat(auto-fit, minmax(455px, 1fr));
     grid-gap: 20px;
 }
 .character {
@@ -30,7 +30,15 @@ h1 {
     grid-template-columns: 3fr 1fr;
     grid-template-areas:
         'name image'
-        'house image';
+        'house image'
+        'species image'
+        'gender image'
+        'dateOfBirth image'
+        'ancestry image'
+        'eyeColour image'
+        'hairColour image'
+        'wand image'
+        'patronus image';
     text-align: left;
 }
 .character > h2 {
@@ -38,12 +46,12 @@ h1 {
     margin-bottom: 0px;
 }
 .character > p {
-    grid-area: house;
+    /*grid-area: house;*/
     margin: 0;
     margin-top: -18px;
 }
 .character > img {
-    max-height: 100px;
+    max-height: 250px;
     grid-area: image;
 }
 #searchBar {
